--- a/h/templates/client/viewer.html
+++ b/h/templates/client/viewer.html
@@ -3,12 +3,12 @@
 (See gh2642 for rationale for 'ng-show="true"')
  -->
 <ul class="annotation-type">
-  <li class="annotation-type__annotation" ng-click="filterAnnotationsByType('annotation')">
+  <li class="annotation-type__annotation" ng-click="selectTab('annotation')">
     Annotations( {{ totalAnnotations }} )
     <span class="Annotation-type__count">
     </span>
   </li>
-  <li class="annotation-type__note" ng-click="filterAnnotationsByType('note')">
+  <li class="annotation-type__note" ng-click="selectTab('note')">
     Notes( {{ totalNotes }} )
     <span class="Annotation-type__count">
     </span>
